--- a/free-nodes/2025-9-4-clash-node-daily-updates.htm
+++ b/free-nodes/2025-9-4-clash-node-daily-updates.htm
@@ -175,8 +175,38 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-18-free-clash.htm">8月18日更新21.5M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、日本、新加坡、加拿大、香港、韩国、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-23-free-node-subscribe.htm">8月23日更新22.7M/S，2025年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、加拿大、美国、欧洲、韩国、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-9-14-free-ssr-node.htm">9月14日更新18.4M/S，2025年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、欧洲、美国、香港、日本、新加坡等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-8-8-free-clash.htm">8月8日更新18.9M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、欧洲、香港、美国、新加坡、日本、加拿大等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-8-15-shadowrocket-node.htm">8月15日更新18.6M/S，2025年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、美国、日本、新加坡、韩国、加拿大等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -195,8 +225,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-9-node-share-links.htm">9月9日更新20.9M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、欧洲、日本、美国、香港等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-2-free-v2ray.htm">9月2日更新21.8M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、韩国、加拿大、香港、新加坡、欧洲等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -205,8 +235,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-4-clash-node-daily-updates.htm">9月4日更新20.6M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、日本、新加坡、加拿大、美国、香港、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-3-free-subscribe-node.htm">9月3日更新21.6M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、新加坡、加拿大、日本、欧洲、香港等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -215,8 +245,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-9-free-shadowrocket-node.htm">8月9日更新21.3M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、新加坡、欧洲、美国、韩国、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-1-node-share.htm">9月1日更新20.9M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、日本、美国、香港、韩国、新加坡、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -225,18 +255,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-20-free-subscribe-node.htm">8月20日更新19.3M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、香港、欧洲、美国等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-25-shadowrocket-node.htm">8月25日更新22.5M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、韩国、日本、加拿大、新加坡、香港等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-10-free-clash-subscribe.htm">8月10日更新18.7M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、加拿大、新加坡、韩国、日本、美国、香港等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -251,33 +271,13 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-11-free-v2ray-subscribe.htm">8月11日更新20M/S，2025年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、韩国、美国、香港、新加坡、日本、加拿大等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-4-clash-node.htm">8月4日更新18.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、日本、美国、欧洲、加拿大、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">8</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                                <h4><span class="badge" style="float: right;">13</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
                                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
                             </div>
         </div>
